# ISSR

./: .gitattributes
ISSR_AI4MH_Yixing_Fan/: .gitignore  LICENSE  README.md  midterm_report.ipynb  requirements.txt
ISSR_AI4MH_Yixing_Fan/output/: bert_sentiment_result.csv  experiment.ipynb  filtered_reddit_posts.csv  google_trends_mental_health.csv  sentiment_risk_classified.csv  word_bank.csv
ISSR_Communication_Analysis_Tool_Samuel_Kalu/: .gitignore  README.MD  app.py  requirements.txt  weights_download.py
ISSR_TCAMP_TeamCommunicationAnalysisAndProcessingPipeline_VennelaVarshiniAnasoori/: .gitignore  PROGRESS.md  README.md  environment.yml  evaluate_batch.py  pyproject.toml  pyrightconfig.json  requirements.txt  run_pipeline.py
ISSR_TCAMP_TeamCommunicationAnalysisAndProcessingPipeline_VennelaVarshiniAnasoori/observations/: README.md  diarization_results.json
ISSR_TCAMP_TeamCommunicationAnalysisAndProcessingPipeline_VennelaVarshiniAnasoori/screening_notebooks/: Audio_enhancement_N2.ipynb
ISSR_TCAMP_TeamCommunicationAnalysisAndProcessingPipeline_VennelaVarshiniAnasoori/tcamp/: __init__.py  pipeline.py
ISSR_TCAMP_TeamCommunicationAnalysisAndProcessingPipeline_VennelaVarshiniAnasoori/tcamp/diarization/: __init__.py  diarize.py  utils.py
ISSR_TCAMP_TeamCommunicationAnalysisAndProcessingPipeline_VennelaVarshiniAnasoori/tcamp/enhance/: __init__.py  baseline.py  enhance.py  metrics.py
ISSR_TCAMP_TeamCommunicationAnalysisAndProcessingPipeline_VennelaVarshiniAnasoori/tests/: __init__.py  conftest.py  test_diarize.py  test_enhance.py
(+21 files in other folders)
